# board_tracker

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
examples/: prompts.json
scripts/: bootstrap.sh  bootstrap_macos.sh
src/board_init/: __init__.py  analyze_tracking.py  cli.py  config.py  geometry.py  headless.py  interactive.py  io.py  oscillation.py  pipeline.py  postprocess.py  resize.py  sam_wrapper.py  scoring.py  track_video.py  tracking.py  types.py  visualization.py
tests/: test_cli.py  test_geometry.py  test_headless.py  test_io.py  test_oscillation.py  test_postprocess.py  test_resize.py  test_scoring.py  test_tracking.py
